--- a/angular.json
+++ b/angular.json
@@ -1,5 +1,8 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
+  "cli": {
+    "analytics": "607a019a-95be-4548-b1c4-6c46b000bb0f"
+  },
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
